argocd/applications/telehealth/data-integration-stg/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-telehealth-data-integration-stg-api
  namespace: telehealth-data-integration
spec:
  selector:
    app: telehealth-data-integration-stg
  ports:
    - protocol: TCP
      port: 8000
      name: api-svc
      targetPort: api
  type: ClusterIP
