argocd/applications/telehealth/data-integration-stg/ingress-docs-oauth2-proxy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-telehealth-data-integration-stg-api-docs-oauth2-proxy
  namespace: telehealth-data-integration
  labels:
    app: telehealth-data-integration-stg
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"

    nginx.ingress.kubernetes.io/proxy-buffer-size: "64k"
    ingress.kubernetes.io/force-ssl-redirect: "true"
    ingress.kubernetes.io/proxy-body-size: "1024m"
    nginx.ingress.kubernetes.io/proxy-body-size: "1024m"
spec:
  tls:
    - hosts:
      - telehealth-data-integration-stg.tcc-clinicalsolutions.de
      secretName: telehealth-data-integration-stg-api-tls
  rules:
    - host: telehealth-data-integration-stg.tcc-clinicalsolutions.de
      http:
        paths:
          - path: /oauth2
            pathType: Prefix
            backend:
              service:
                name: telehealth-data-integration-stg-oauth2-proxy
                port:
                  number: 80
