argocd/applications/telehealth/data-integration-stg/ingress-docs.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-telehealth-data-integration-stg-api-docs
  namespace: telehealth-data-integration
  labels:
    app: telehealth-data-integration-stg

  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"

    nginx.ingress.kubernetes.io/proxy-buffer-size: "64k"
    ingress.kubernetes.io/force-ssl-redirect: "true"
    ingress.kubernetes.io/proxy-body-size: "1024m"
    nginx.ingress.kubernetes.io/proxy-body-size: "1024m"
spec:
  tls:
    - hosts:
        - telehealth-data-integration-stg.tcc-clinicalsolutions.de
      secretName: telehealth-data-integration-stg-api-tls
  rules:
    - host: telehealth-data-integration-stg.tcc-clinicalsolutions.de
      http:
        paths:
          - pathType: Prefix
            path: /docs
            backend:
              service:
                name: svc-telehealth-data-integration-stg-api
                port:
                  number: 8000
